# SZ4IoT

./: Deep_sleep.rar  Energy_Sender.rar  README.md  Receiver.rar
FLOAT dataset1/Lightning2/: Lightning2.txt
FLOAT dataset1/Lightning2/2940/: file11760.txt  file14700.txt  file17640.txt  file20580.txt  file23520.txt  file26460.txt  file2940.txt  file29400.txt  file32340.txt  file35280.txt  file38220.txt  file5880.txt  file8820.txt
FLOAT dataset1/Lightning2/4779/: file14337.txt  file19116.txt  file23895.txt  file28674.txt  file33453.txt  file38232.txt  file4779.txt  file9558.txt
FLOAT dataset1/Lightning2/7644/: file15288.txt  file22932.txt  file30576.txt  file38220.txt  file7644.txt
FLOAT dataset1/Lightning2/9555/: file19110.txt  file28665.txt  file38220.csv  file9555.txt
FLOAT dataset1/Plane/: Plane.txt
FLOAT dataset1/Plane/1008/: file1008.txt  file10080.txt  file11088.txt  file12096.txt  file13104.txt  file14112.txt  file15120.txt  file2016.txt  file3024.txt  file4032.txt  file5040.txt  file6048.txt  file7056.txt  file8064.txt  file9072.txt
FLOAT dataset2/Car/: CarDataset.txt
INT dataset1/INT_MIMIC Database Numerics (mimicdbnumerics)/: MIMIC.txt
INT dataset2/INT_EEG/: INT-EEG-size(131100).txt  INT-EEG-size(131104).txt  INT-EEG-size(81200).txt
INT dataset2/INT_Fetal PCG Database (fpcgdb)/: Fetal PCG Database (fpcgdb).txt
SZ4IoT/: CMakeLists.txt  SZ4IOT.c  SZ4IOT.h  SZ4IOT.ino  SZ4IoT.c  SZ4IoT.h  SZ4IoT.ino  SZ_lib.c  SZ_lib.h  deflate.c  deflate.c~  infback.c  inflate.c  inflate.c~  main.c~  main.h  main.h~  sz.h
(+255 files in other folders)
